# line_follow_robot_description

./: CMakeLists.txt  package.xml
config/: diff_drive_controller.yaml  view_robot.rviz
launch/: gazebo_sim.launch.py  view.launch.py
meshes/: camera.STL  lidar.STL  wheel_1.STL  wheel_2.STL  wheel_4.STL
urdf/: gazebo.xacro  gazebo_skid_steer.xacro  line_follow_robot.urdf.xacro  line_follow_robot_macro.xacro  ros2_control.xacro  variables.xacro  wheel.urdf.xacro
